added more parameters to the raspivid configuration and fixed some issues for the raspi camera