@@ -1,31 +1,67 @@
 package FHNWGPIO.Components;
 
-import FHNWGPIO.Components.helper.RaspiVidConfiguration;
+import FHNWGPIO.Components.Helper.RaspiVidConfiguration;
 import com.pi4j.util.Console;
 import uk.co.caprica.picam.*;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.List;
 
 import static uk.co.caprica.picam.PicamNativeLibrary.installTempLibrary;
 
+/**
+ * This is the component class of the Raspberry Pi Camera.
+ */
 public class RaspberryPiCameraComponent {
     private Console console;
     private CameraConfiguration raspiStillConfiguration;
     private RaspiVidConfiguration raspiVidConfiguration;
-    private Process process;
-    private ProcessBuilder processBuilder;
     private Camera camera;
+    private boolean isRaspiStillAvailable, isRaspiVidAvailable;
 
-    public RaspberryPiCameraComponent(Console console, CameraConfiguration raspiStillConfiguration) {
+    /**
+     * Constructor for using the picture and video functionality
+     * @param console
+     * @param raspiStillConfiguration
+     * @param raspiVidConfiguration
+     */
+    public RaspberryPiCameraComponent(Console console, CameraConfiguration raspiStillConfiguration, RaspiVidConfiguration raspiVidConfiguration) {
         this.console = console;
         this.raspiStillConfiguration = raspiStillConfiguration;
+        this.raspiVidConfiguration = raspiVidConfiguration;
+        isRaspiVidAvailable = true;
+        isRaspiStillAvailable = true;
 
         init();
     }
 
+    /**
+     * Constructor for only using the picture functionality
+     * @param console
+     * @param raspiStillConfiguration
+     */
+    public RaspberryPiCameraComponent(Console console, CameraConfiguration raspiStillConfiguration){
+        this.console = console;
+        this.raspiStillConfiguration = raspiStillConfiguration;
+        isRaspiStillAvailable = true;
+
+        init();
+    }
+
+    /**
+     * Constructor for only using the video functionality
+     * @param console console that is used for logging
+     * @param raspiVidConfiguration configuration file which is used for the videos
+     */
+    public RaspberryPiCameraComponent(Console console, RaspiVidConfiguration raspiVidConfiguration) {
+        this.console = console;
+        this.raspiVidConfiguration = raspiVidConfiguration;
+        isRaspiVidAvailable = true;
+    }
+
+    /**
+     * initialisation of the picam native library.
+     */
     private void init() {
         try {
             // Extract the bundled picam native library to a temporary file and load it
@@ -33,42 +69,76 @@ public class RaspberryPiCameraComponent {
             camera = new Camera(raspiStillConfiguration);
 
         } catch (NativeLibraryException | CameraException e) {
-            e.printStackTrace();
+            console.println("Error while initialising: " + e.getMessage());
         }
     }
 
-    public void takeStill(CameraConfiguration config) {
-        takeStill(config, "/home/pi/Pictures/picam.jpg", 0);
+    /**
+     * takes picture and saves it to the default Pictures folder
+     */
+    public void takeStill() {
+        takeStill("/home/pi/Pictures/picam.jpg", 0);
     }
 
-    public void takeStill(CameraConfiguration config, String path) {
-        takeStill(config, path, 0);
+    /**
+     * takes picture and saves it to the outputPath
+     * @param outputPath path to save picture to
+     */
+    public void takeStill(String outputPath) {
+        takeStill(outputPath, 0);
     }
 
-    public void takeStill(CameraConfiguration config, String path, int delay) {
+    /**
+     * takes a picture using the picam library and saves it to the specified output
+     * @param outputPath path to the output file that saves the picture
+     * @param delay before taking the picture
+     */
+    public void takeStill(String outputPath, int delay) {
+        if (!isRaspiStillAvailable) {
+            throw new ExceptionInInitializerError("RaspiStill has to be initialised with the Configuration for taking pictures");
+        }
         try {
             //For the first picture a longer delay is sometimes needed
-            camera.takePicture(new FilePictureCaptureHandler(new File(path)), delay);
+            camera.takePicture(new FilePictureCaptureHandler(new File(outputPath)), delay);
 
         } catch (Exception e) {
-            e.printStackTrace();
+            console.println("Error while taking picture: " + e.getMessage());
         }
     }
 
+    /**
+     * The picam library has a private constructor and therefore needs this method
+     * @return new CameraConfiguration object of the picam library
+     */
     public static CameraConfiguration createCameraConfiguration() {
         return CameraConfiguration.cameraConfiguration();
     }
 
-    public File takeVid(String saveDir) throws IOException, InterruptedException {
-        List<String> command = new ArrayList<>();
-        command.add("raspivid");
-        command.add("-o");
-        command.add(saveDir);
-        //command.addAll(raspiVidConfiguration.getValues());
+    /**
+     * Takes a video with the configuration and saves it to the output path
+     * @param outputPath
+     * @throws IOException
+     * @throws InterruptedException
+     */
+    public void takeVid(String outputPath) throws IOException, InterruptedException {
+        if (!isRaspiVidAvailable) {
+            throw new ExceptionInInitializerError("RaspiVid has to be initialised with the Configuration for taking videos");
+        }
+        try {
+            raspiVidConfiguration.output(outputPath);
+            String command = raspiVidConfiguration.toString();
 
-        processBuilder = new ProcessBuilder(command);
-        process = processBuilder.start();
-        process.waitFor();
-        return new File(saveDir);
+            //This will just run in the background and save the video in a file
+            Process p = Runtime.getRuntime().exec(command);
+            p.waitFor();
+            Thread.sleep(raspiVidConfiguration.getTime());
+
+            p.destroy();
+            if (p.isAlive())
+                p.destroyForcibly();
+
+        } catch (IOException | InterruptedException ieo) {
+            console.println("Error while taking video: " + ieo.getMessage());
+        }
     }
 }
